# nested-shaper

./: .clang-format  .gitattributes  .gitignore  404.html  CMakeLists.txt  LICENSE  Makefile  README.md  index.html  mkdocs.yml  search.html
.github/workflows/: ci.yml
advanced_guide/: index.html
cmake/: CompilerWarnings.cmake  add_compile_warnings.cmake  parse_git_tag.cmake  static_analyzers.cmake  version.hpp.in
docs/: advanced_guide.md  index.md  introduction.md  theory.md
examples/: CMakeLists.txt  euclidean_array.cpp  euclidean_step.cpp  euclidean_trajectory.cpp  examples.cpp
include/nested-shaper/: MovingMetrics.hpp  NestedShaper.hpp  Queue.hpp  ShaperMetrics.hpp  average_filter.hpp  container.hpp  nested_filter.hpp  nested_shaper.hpp  sized_queue.hpp  tiny_utility.hpp  version.hpp
include/nested-shaper/internal/: derivative.hpp  pack.hpp
include/nested-shaper/metrics/: angle_derivative_metrics.hpp  angle_mean_cumulative_metrics.hpp  angle_mean_recursive_metrics.hpp  central_finite_difference_coefficients.hpp  euclidean_derivative_metrics.hpp  euclidean_mean_cumulative_metrics.hpp  euclidean_mean_recursive_metrics.hpp  kahan_accumulator.hpp
include/nested-shaper/summator/: kahan_babushka_klein_add.hpp  kahan_babushka_neumaier_add.hpp  naive_add.hpp  summator.hpp  summators.hpp
search/: search_index.json
test/: CMakeLists.txt  angle_derivative_metrics.cpp  angle_mean_cumulative_metrics.cpp  angle_mean_recursive_metrics.cpp  euclidean_derivative_metrics.cpp  euclidean_mean_cumulative_metrics.cpp  euclidean_mean_recursive_meterics.cpp  kahan_accumulator.cpp  moving_metrics.cpp  nested_shaper.cpp  queue.cpp  shaper_metrics.cpp  test.cpp  tests.cpp  tiny_utility.cpp
theory/: index.html
